fix spacing in dialog and rename dangerSerious to serious

--- a/src/styles/components/_dialog.scss
+++ b/src/styles/components/_dialog.scss
@@ -10,7 +10,7 @@
   }
 
   .octo-dialog__serious-danger {
-    margin-top: 2.5rem;
+    margin-top: 1.25rem;
   }
 
   .octo-dialog__buttons {
